--- a/2.login.html
+++ b/2.login.html
@@ -1,7 +1,7 @@
 <html>
     <head><title>登入</title></head>
     <body>
-        <form action="2.login.php" method="post">   #send data to file 2.login.php
+        <form action="3.login.php" method="post">   #send data to file 2.login.php or 3.login.php
             帳號：<input type="text" name="id"><br> 
             密碼：<input type="password" name="pwd"><br> 
             <input type="submit"> 
